2006-06-06  Paul Walmsley <paul@booyaka.com>

	* usb.c: canon_int_usb_poll_interrupt_pipe() can return a negative
	  result to indicate an error.  But canon_usb_capture_dialogue()
	  only checks whether the result was equal to 0 to test for
	  an error.

2005-11-02  Marcus Meissner  <marcus@jet.franken.de>

	* canon.c: S1 IS and S2 IS in current CVS are not working,
	  comment out for now :(

2005-07-19  Stephen Westin
	* canon.c: Corrected "IXY Digital 60" to "IXY Digital 600" now
		that one has been sighted in the wild.
		Moved SD500/IXUS 700/IXY 600 from class 1 to class 5,
		since "get picture abilities" fails.

2005-06-21  Stephen Westin
	* canon.c: Added ID for PowerShot S2 IS.
		Revised format specifications in error/log messages:
		I think that all length-related quantities are now
		coerced to long, as some systems (e.g. MacOS X) have
		64-bit length types and 64-bit pointers are coming.

2005-06-10  Stephen Westin
	* canon.c: The PowerShot SD400/SD500 (aka Digital IXUS 50/60
		aka IXY Digital 55/60) don't support capture at all,
		according to Canon software manuals.
		Added support for a real "is this awake?" query
		(implemented in usb.c).

2005-06-10  Stephen Westin
	* canon.c: Moved PowerShot SD200/IXUS 30/IXY 40 from class 1 to
		class 6 for experimentation. This camera now needs
		CFLAGS=-DCANON_EXPERIMENTAL_20D to be included in the list.
		I kinda suspect that the SD400/IXUS 50/IXY 55 will need
		to go along with them. The A510 has been demonstrated working
		with the older protocol.

2005-05-05  Stephen Westin
	* canon.c: We now set and fetch the owner name correctly in new
		protocol.
		Error messages are improved.
		  o more text in place of numeric error codes
		  o "amount of data" -> "length"
		I think I now have gotten rid of "gp_context_message"
		(which stops for interactive input) when we are surprised
		at the length returned by a command.

2005-05-02  Stephen Westin
	* canon.c: Initial capability to get JPEG thumbnails from CR2 raw